chrome/browser/media/history/media_history_playback_table.cc
@@ -72,8 +72,8 @@ bool MediaHistoryPlaybackTable::SavePlayback(
       "VALUES ((SELECT id FROM origin WHERE origin = ?), ?, ?, ?, ?, ?, ?)"));
   statement.BindString(0, watch_time.origin.spec());
   statement.BindString(1, watch_time.url.spec());
-  statement.BindInt(2, watch_time.cumulative_watch_time.InMilliseconds());
-  statement.BindInt(3, watch_time.last_timestamp.InMilliseconds());
+  statement.BindInt64(2, watch_time.cumulative_watch_time.InMilliseconds());
+  statement.BindInt64(3, watch_time.last_timestamp.InMilliseconds());
   statement.BindInt(4, watch_time.has_video);
   statement.BindInt(5, watch_time.has_audio);
   statement.BindInt64(6,
